added share buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Your browser does not support video playback.
         </video>
         
-        <!-- Overlay and content (inside hero, not container) -->
+        <!-- Overlay and content -->
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Welcome to Vibe Tagger</h1>
@@ -25,32 +25,23 @@
         </div>
     </section>
 
-</section>
-
-<!-- Share Section -->
-<section class="share-section">
-    <div class="share-container">
-        <p class="share-text">Love Vibe Tagger? Share it with your network!</p>
-        <div class="share-buttons">
-            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Vibe%20Tagger%20-%20Generate%20trending%20hashtags%20instantly!&url=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn twitter-btn">
-                <span class="share-icon">𝕏</span> Share on X
-            </a>
-            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn linkedin-btn">
-                <span class="share-icon">in</span> Share on LinkedIn
-            </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn facebook-btn">
-                <span class="share-icon">f</span> Share on Facebook
-            </a>
+    <!-- Share Section -->
+    <section class="share-section">
+        <div class="share-container">
+            <p class="share-text">Love Vibe Tagger? Share it with your network!</p>
+            <div class="share-buttons">
+                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Vibe%20Tagger%20-%20Generate%20trending%20hashtags%20instantly!&url=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn twitter-btn">
+                    <span class="share-icon">𝕏</span> Share on X
+                </a>
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn linkedin-btn">
+                    <span class="share-icon">in</span> Share on LinkedIn
+                </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://miryre.github.io/Vibe-Tagger/" target="_blank" class="share-btn facebook-btn">
+                    <span class="share-icon">f</span> Share on Facebook
+                </a>
+            </div>
         </div>
-    </div>
-</section>
-
-<!-- Header Section (Full width) -->
-<section class="header-section">
-
-
-
-
+    </section>
 
     <!-- Header Section (Full width) -->
     <section class="header-section">
