corrected meta data for sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vibe Tagger - Trending Social Media Hashtags</title>
+    <meta name="description" content="Generate trending hashtags instantly for Instagram, Twitter, TikTok, and more. Free hashtag generator tool for content creators.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://miryre.github.io/Vibe-Tagger/">
+    <meta property="og:title" content="Vibe Tagger - Free Hashtag Generator">
+    <meta property="og:description" content="Generate 90+ trending hashtags instantly for your social media posts. Perfect for Instagram, Twitter, TikTok creators.">
+    <meta property="og:image" content="https://miryre.github.io/Vibe-Tagger/images/social-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://miryre.github.io/Vibe-Tagger/">
+    <meta property="twitter:title" content="Vibe Tagger - Free Hashtag Generator">
+    <meta property="twitter:description" content="Generate 90+ trending hashtags instantly for your social media posts.">
+    <meta property="twitter:image" content="https://miryre.github.io/Vibe-Tagger/images/social-preview.png">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
