--- a/index.html
+++ b/index.html
@@ -33,8 +33,21 @@
     </head>
 <body>
 
+<!--Navbar-->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="#home" class="nav-logo">Vibe Tagger</a>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#generate">Generate Tags</a>
+                <a href="#about">About</a>
+                <a href="https://github.com/Miryre" target="_blank">Portfolio</a>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero Section (Full width with video) -->
-    <section class="hero">
+    <section class="hero" id="home">
         <!-- Video element -->
         <video class="hero-video" autoplay muted loop playsinline>
             <source src="videos/Vibe-Tagger-Header.mp4" type="video/mp4">
@@ -77,7 +90,7 @@
     </section>
 
     <!-- Input Section (Full width with centered content) -->
-    <section class="input-section-full">
+    <section class="input-section-full" id="generate">
         <div class="input-container">
             <div class="input-group">
                 <label for="nicheInput">Enter Your Niche:</label>
@@ -108,6 +121,39 @@
         </div>
     </section>
 
+<!--About-->
+    <section class="about-section" id="about">
+        <div class="about-container">
+            <h2>About Vibe Tagger</h2>
+            <div class="about-content">
+                <p>
+                    Vibe Tagger is a free hashtag generator designed to help content creators, influencers, 
+                    and businesses maximize their social media reach. Whether you're posting on Instagram, 
+                    TikTok, Twitter, or LinkedIn, our tool generates relevant hashtags tailored to your niche.
+                </p>
+                <p>
+                    Simply enter your topic or niche, and instantly receive a curated list of hashtags 
+                    to boost your engagement and visibility. No sign-up required, completely free to use.
+                </p>
+                <div class="about-features">
+                    <div class="feature-card">
+                        <h3>Instant Generation</h3>
+                        <p>Get 90+ hashtags in seconds</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3> Niche-Specific</h3>
+                        <p>Tailored to your content</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Easy Copy</h3>
+                        <p>One-click copy to clipboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-container">
@@ -121,19 +167,18 @@
                     <div class="footer-column">
                         <h4>Product</h4>
                         <ul>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#how-it-works">How It Works</a></li>
-                            <li><a href="#pricing">Pricing</a></li>
+                            <li><a href="#generate">Hashtag Generator</a></li>
+                            <li><a href="#about">About</a></li>
                         </ul>
                     </div>
                     
                     <div class="footer-column">
-                        <h4>Company</h4>
+                        <h4>Resources</h4>
                         <ul>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="https://github.com/Miryre/Vibe-Tagger" target="_blank">View on GitHub</a></li>
+                            <li><a href="mailto:thevanilladeveloper@gmail.com">Contact</a></li>
                         </ul>
+                    </div>
                     </div>
                     
                     <div class="footer-column">
