prepare for github pages deployment

--- a/index.html
+++ b/index.html
@@ -231,6 +231,6 @@
     </footer>
     
     <script src="script.js"></script>
-    
+    <!--Made with love by elizabeth, more to come soon.-->
 </body>
 </html>
