added a counter for how many hashtags generated, at 500 generations will add google analytics, fingers crossed this is a helpful app.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-container">
+            <div class="stats-banner">
+                <div class="stat-item">
+                    <strong><span id="generationCounter">0</span></strong> hashtags generated and counting!
+                </div>
+            </div>
             <div class="footer-content">
                 <div class="footer-brand">
                     <h3>Vibe Tagger</h3>
